# sdl_app_core

./: CMakeLists.txt  Makefile  README.md
src/: AppDecorator.cc  AppDecorator.hh  AppDecorator.hxx  AppException.cc  AppException.hh  AppException.hxx  CMakeLists.txt  MainWindowLayout.cc  MainWindowLayout.hh  MainWindowLayout.hxx  RolesInfo.cc  RolesInfo.hh  RolesInfo.hxx  SdlApplication.cc  SdlApplication.hh  SdlApplication.hxx  SdlEventHandler.cc  SdlEventHandler.hh  SdlEventHandler.hxx  VirtualLayoutItem.cc  VirtualLayoutItem.hh  VirtualLayoutItem.hxx  WidgetRole.hh  WidgetRole.hxx
